# nautobot-docker-compose-setup

./: Dockerfile  creds.env  docker-compose.yml  mod_Dockerfile  pyproject.toml
config/: nautobot_config.py
plugins/nautobot-nornir-fortinet/: README.md  pyproject.toml  requirements.txt
plugins/nautobot-nornir-fortinet/nautobot_nornir_fortinet/plugins/tasks/dispatcher/: fortinet.py
plugins/nautobot-nornir-fortinet/nautobot_nornir_fortinet/tests/: unit.py
